--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Witaj"
+        android:translationX="400px"
+        android:translationY="30px"
+        android:fontFamily="sans-serif-black"
+        android:textSize="50dp"
+        android:textColor="@color/black"
+        tools:ignore="MissingConstraints">
+    </TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Zakup coś w naszym sklepie"
+        android:translationX="330px"
+        android:translationY="400px"
+        android:textSize="40px"
+        ></TextView>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX = "50dp"
+        tools:layout_editor_absoluteY = "300dp"
+        tools:srcCompat="@tools:sample/avatars"
+    ></ImageView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
